--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dataset_creation = [
         "pubchempy",
         "canonicalize_psmiles@git+https://github.com/Ramprasad-Group/canonicalize_psmiles.git",
         #"tucan@git+https://github.com/TUCAN-nest/TUCAN.git"  # the current version has bugs due to the type checking, maybe this is due to our python version?
+        "rxn-chem-utils"
 ]
 
 training = [
