--- a/data/tabular/ord_predictions/meta.yaml
+++ b/data/tabular/ord_predictions/meta.yaml
@@ -52,13 +52,13 @@ templates:
     - The {RXNSMILES__names__noun} {RXNSMILES#} has the {educt_string__names__noun} {educt_string#} and the {product_string__names__noun} {product_string#}.
     - The {RXNSMILES__names__noun} {RXNSMILES#} has the {product_string__names__noun} {product_string#} and the {educt_string__names__noun} {educt_string#}.
     - |-
-      Question: {#What|Which!} {educt_string__names__noun} are {#needed|required!} to {#produce|synthesize!} the {product_string__names__noun} {product_string#}?
+      Question: {#What|Which!} {educt_string__names__noun} are {#needed|required!} to {#produce|synthesize!} {product_string#}?
       Answer: {educt_string#}.
     - |-
       Question: {#What|Which!} {product_string__names__noun} are produced from the {educt_string__names__noun} {educt_string#}?
       Answer: {product_string#}.
     - |-
-      User: I {#want|would like to|must|need to!} {#synthesize|produce!} the {product_string__names__noun} {product_string#}.
+      User: I {#want|would like to|must|need to!} {#synthesize|produce!} {product_string#}.
       Assistant: {#Cool, is|That's interesting, is|Great, is|Is!} there anything else I can do for you?
       User: {#Yes, |!}I would like to know the {educt_string__names__noun} I need to produce the {product_string__names__noun} {product_string#}.
       Assistant: {#I recommend|I suggest|I propose|I advise!} the following {educt_string__names__noun}: {educt_string#}.
