--- a/data/tabular/bc5disease/meta.yaml
+++ b/data/tabular/bc5disease/meta.yaml
@@ -50,6 +50,6 @@ templates:
       {#Sentence|Description!}: {sentence#}
       Answer: {matched_words#}
     - |-
-      User: Does the following text contain mentions of diseases?{# Can you return matches?| Can you output matches?!}
+      User: Does the following text contain mentions of diseases?{# Can you return matches?| Can you output matches?|Please return matches!}
       {#Text: |!}{sentence#}
       Assistant: {#I found|There is!} {matched_words#}
