--- a/data/tabular/SIDER/meta.yaml
+++ b/data/tabular/SIDER/meta.yaml
@@ -144,12 +144,12 @@ targets:
       names:
           - noun: nervous system disorders
           - noun: disorders of the nervous system
-    - id: injury_poisoning_and_procedural_complications
-      description: injury, poisoning and procedural complications
+    - id: injury_and_poisoning
+      description: injury and poisoning
       type: boolean
       names:
-          - noun: injury, poisoning and procedural complications
-          - noun: injuries and poisonings
+          - noun: injury and poisoning
+          - noun: poisonings and injuries
 license: CC BY 4.0
 links:
     - url: https://academic.oup.com/nar/article/44/D1/D1075/2502602?login=false
@@ -219,5 +219,5 @@ templates:
       a &a }{#potential cause|potential reason!} for {cardiac_disorders__names__noun}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {nervous_system_disorders#not
       a &a }{#potential cause|potential reason!} for {nervous_system_disorders__names__noun}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {injury_poisoning_and_procedural_complications#not
-      a &a }{#potential cause|potential reason!} for {injury_poisoning_and_procedural_complications__names__noun}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {injury_and_poisoning#not
+      a &a }{#potential cause|potential reason!} for {injury_and_poisoning__names__noun}.
