--- a/data/tabular/mp_self_supervised/meta.yaml
+++ b/data/tabular/mp_self_supervised/meta.yaml
@@ -1,11 +1,7 @@
 ---
 name: mp_self_supervised
 description: |-
-    QM9 is a comprehensive dataset that provides geometric, energetic,
-    electronic and thermodynamic properties for a subset of GDB-17
-    database, comprising 134 thousand stable organic molecules with up
-    to 9 heavy atoms.  All molecules are modeled using density
-    functional theory (B3LYP/6-31G(2df,p) based DFT).
+    The materials project is a dabase of computed properties of materials.
 targets:
     - id: density
       description: Density of the material
