--- a/data/tabular/mofdscribe/meta.yaml
+++ b/data/tabular/mofdscribe/meta.yaml
@@ -13,15 +13,15 @@ identifiers:
     - id: cif
       type: text
       description: CIFFILE
-      names: 
+      names:
           - noun: CIF file
-          - noun: CIF
           - noun: Crystallographic Information File (CIF)
+          - noun: CIF card
 license: CC BY 4.0
 links:
     - url: https://github.com/kjappelbaum/mofdscribe
       description: codebase used to generate this dataset
-num_points: 274983
+num_points: 1267
 bibtex:
     - |-
       @article{Jablonka_2023,
@@ -37,7 +37,7 @@ bibtex:
         title = {An Ecosystem for Digital Reticular Chemistry},
         journal = {ACS Cent. Sci.}
       }
-    - |- 
+    - |-
       @article{Ganose_2019,
         doi = {10.1557/mrc.2019.94},
         url = {https://doi.org/10.1557%2Fmrc.2019.94},
@@ -52,8 +52,10 @@ bibtex:
         journal = {MRS Communications}
       }
 templates:
-  - |- 
-    Task: {#Describe|Write a description of!} the structure with the {cif__description} {cif#}.
-    {#Answer: |A: |!}{description#}
-  - |-
-    Task: {#Create|Generate|Propose!} a 
+    - |-
+      Task: {#Describe|Write a description of!} the structure with the {cif__names__noun} {cif#}.
+      {#Answer: |A: |!}{description#}
+    - |-
+      Task: {#Create|Generate|Propose!} a {cif__names__noun} of a {#metal-organic framework|MOF|crystal structure|structure|material!} with the following description
+      {description#}.
+      {#Answer: |A: |!}{cif#}
