--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "chemnlp"
 description = "Open source chemistry dataset & LLM"
 readme = "README.md"
-requires-python = "==3.8.*"  # required for gpt-neox
+requires-python = "==3.9.*"
 dependencies = [
         "datasets>=2.8.0",
         "numpy>=1.21.2",
@@ -45,7 +45,8 @@ dataset_creation = [
         "pylatexenc",
         "canonicalize_psmiles@git+https://github.com/Ramprasad-Group/canonicalize_psmiles.git",
         #"tucan@git+https://github.com/TUCAN-nest/TUCAN.git"  # the current version has bugs due to the type checking, maybe this is due to our python version?
-        "rxn-chem-utils"
+        "rxn-chem-utils",
+        "safe-mol",
 ]
 
 training = [
