--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,8 @@ description = "Open source chemistry dataset & LLM"
 readme = "README.md"
 requires-python = "==3.9.*"
 dependencies = [
-        "datasets>=2.8.0",
-        "numpy>=1.21.2",
-        "openpyxl>=3.0.9",
-        "pandas>=1.3.3",
-        "peft",
+        "pandas",
         "pydantic",
-        "pytdc>=0.3.9",
-        "transformers",
-        "wandb"
 ]
 
 dynamic = ["version"]
