add givemeconformer dependency Fixes #475

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ dataset_creation = [
         "pylatexenc",
         "canonicalize_psmiles@git+https://github.com/Ramprasad-Group/canonicalize_psmiles.git",
         #"tucan@git+https://github.com/TUCAN-nest/TUCAN.git"  # the current version has bugs due to the type checking, maybe this is due to our python version?
-        "rxn-chem-utils"
+        "rxn-chem-utils",
+        "givemeconformer"
 ]
 
 training = [
